# wafle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst  wafle.rst
docs/source/api/: functional.rst  index.rst  mapper.rst  utils.rst
tests/: conftest.py  test_functional.py  test_mapper.py
wafle/: __init__.py  _stubs.py  _stubs.pyi  consumers.py  mapper.py
