[tool.poetry]
name = "wafle"
version = "0.2.0"
description = "Wizzy's Awesome Functional LibrarE"
authors = ["WizzyGeek <ojasscoding@gmail.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.packages]]
include = "wafle"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.8.0"
pre-commit = "^4.0.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinxawesome-theme = "^5.3.2"

[tool.mypy]
allow_redefinition = true
exclude = ["docs/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
